--- a/android/quest/src/mpower-mcgovern/assets/configs/app/registers/child_register_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/registers/child_register_config.json
@@ -21,7 +21,7 @@
           "filterCriteria": [
             {
               "dataType": "DATE",
-              "valueDate": "2017-03-14",
+              "computedRule": "under5",
               "prefix": "GREATERTHAN_OR_EQUALS"
             }
           ]
