Add macrobenchmark tests to performance CI workflow

--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -83,8 +83,12 @@ jobs:
             /Users/runner/Library/Android/sdk/platform-tools/adb install quest/build/outputs/apk/ecbis/debug/quest-ecbis-debug.apk &&
             /Users/runner/Library/Android/sdk/platform-tools/adb shell am instrument -w -e package org.smartregister.fhircore.performance -e "androidx.benchmark.suppressErrors" ACTIVITY-MISSING,CODE-COVERAGE,DEBUGGABLE,UNLOCKED,EMULATOR -e additionalTestOutputDir "/sdcard/Download/" org.smartregister.opensrp.ecbis.test/org.smartregister.fhircore.quest.QuestTestRunner &&
             /Users/runner/Library/Android/sdk/platform-tools/adb shell ls /sdcard/Download/ &&
-            /Users/runner/Library/Android/sdk/platform-tools/adb pull /sdcard/Download/org.smartregister.opensrp.ecbis-benchmarkData.json quest/
+            /Users/runner/Library/Android/sdk/platform-tools/adb pull /sdcard/Download/org.smartregister.opensrp.ecbis-benchmarkData.json quest/ &&
+            ./gradlew :quest:assembleOpensrpDebug --stacktrace && 
+            /Users/runner/Library/Android/sdk/platform-tools/adb install quest/build/outputs/apk/opensrp/debug/quest-opensrp-debug.apk && 
+            ./gradlew :macrobenchmark:connectedBenchmarkAndroidTest &&
+            cp macrobenchmark/build/outputs/connected_android_test_additional_output/benchmark/connected/*/org.smartregister.opensrp.quest.macrobenchmark-benchmarkData.json macrobenchmark/benchmark-results.json
 
       - name: Check performance results
         working-directory: android
-        run: ./gradlew :quest:evaluatePerformanceBenchmarkResults --stacktrace
+        run: ./gradlew :quest:evaluatePerformanceBenchmarkResults --stacktrace && ./gradlew :macrobenchmark:evaluatePerformanceBenchmarkResults --stacktrace
